Changed html structure

--- a/commercepageskeleton.html
+++ b/commercepageskeleton.html
@@ -17,8 +17,8 @@
 		<nav class="navbar navbar-inverse navbar-fixed-top">
 			 <div class="navbar-header">
 			    <ul>
-				<li><button type="button" class="btn btn-primary">Books<a href=</a></button></li>
-				<li><button type="button" class="btn btn-success">Albums<a href=</a></button></li>
+				<li><button type="button" class="btn btn-primary" id="books-btn">Books<a href=</a></button></li>
+				<li><button type="button" class="btn btn-success" id="album-btn">Albums<a href=</a></button></li>
 				<li><button type="button" class="btn btn-success">Contact Us<a href=</a></button></li>
 				<li>c<button type="button" class="btn btn-success">Help<a href=</a></button></li>
 				<li><button type="button" class="btn btn-success">Your Account<a href=</a></button></li>
@@ -27,64 +27,47 @@
 		</nav>
 	</header>
 	<hr>
-		<div class="container row">
-				<div class="col-6 item" id="book_1">
+		<div class="lead content row">
+				<div class="col-6 item" id="book1">
+					<h3 class="name"></h3>
 					<div class="category"></div>
 					<div class="price"></div>
 					<div class="picture"></div>
 					<div class="highlights"></div>
 				</div>
 				
-				<div class="col-6 item" id="book_2">
+				<div class="col-6 item" id="book2">
+					<h3 class="name"></h3>
 					<div class="category"></div>
 					<div class="price"></div>
 					<div class="picture"></div>
 					<div class="highlights"></div>
 				</div>
-			</div>
-		</div>
 
-		<div class="container row">
-			<div class="col-6 item" id="album">
+		
+			<div class="col-6 item" id="album1">
+				<h3 class="name"></h3>
 				<div class="category"></div>
 				<div class="price"></div>
 				<div class="picture"></div>
 				<div class="highlights"></div>
 			</div>
 			
-			<div class="col-6 item" id="album_2">
+			<div class="col-6 item" id="album2">
+				<h3 class="name"></h3>
 				<div class="category"></div>
 				<div class="price"></div>
 				<div class="picture"></div>
 				<div class="highlights"></div>
 			</div>
 		</div>
-	</div>
-	<p>Lorem ipsum dolor sit amet, ius impetus menandri senserit at. Ne usu dico dignissim dissentias. Invidunt vituperata in mei, scribentur theophrastus cu sit. Usu te tempor petentium, vel sonet constituam te. Vidit illum voluptaria ex nam.<br>
 
-Vel at magna eripuit neglegentur, an vix porro docendi moderatius. Eu affert deserunt eam. Ad pri sint commune, mel in verear singulis disputando, summo quaestio reformidans id per. Has homero aperiri at, pri tale intellegebat ne. Eum id ullum graece percipitur, ut dicat melius nam, ei sit elitr facete ponderum. Id postea option qui, his enim ludus electram no.<br>
-
-Ut propriae oporteat sed, no sit noluisse percipitur. His molestie suscipiantur in, falli placerat corrumpit vis an. Dicunt eruditi appareat eu sea. Vel at viderer aperiri luptatum, ex quo modus feugiat nominavi.<br>
-
-Vel ex inani viderer assentior, mei at vide solet audire, vis diam choro civibus an. Deleniti invidunt vis te, nam dicat interesset contentiones an, ut eos detracto persecuti. Recusabo consetetur philosophia et pri, eu eam vidisse sententiae. Et qui vide contentiones, munere graece repudiandae quo eu.<br>
-
-Equidem definiebas ius in, vis in audiam voluptatum. Has discere appellantur ad. Sumo praesent sea no, aeterno nominavi concludaturque cum ex. Eu vide brute phaedrum nam, nam ei ubique aeterno appellantur. No sed brute imperdiet assentior, impetus nusquam prodesset eu eam, aeque solet eu mea. Tota verear regione ex usu, in sed scripta integre.<br>
-
-Erat adhuc necessitatibus ad quo, ea quando everti eum. Nostro neglegentur sit te, ut mel amet mucius doctus. Decore imperdiet persecuti usu at, an cum prompta fastidii. Laboramus reprehendunt vel eu, per et dolores reformidans intellegebat. Tacimates delicatissimi eum no, et ius quod <br>facilisis.
-
-Argumentum mediocritatem in eam. Laoreet detracto persecuti id eum. Vix ex movet regione senserit. Sumo sapientem tincidunt vel at, quot aeterno nec et, ex qui erat fuisset perpetua. An modo posidonium qui. Persius debitis facilisi ut sea, cu sea dicta expetenda.<br>
-
-Id vel novum mundi accumsan, lorem ridens numquam an mel, est ponderum tacimates vituperata ei. Et impedit ancillae mea, et mea nominati disputando. Quis molestie delicata te eos, et qui debitis definiebas deterruisset. Has no decore everti quaerendum, has agam esse ad. Vis ex noster nusquam.<br>
-
-Impetus luptatum te has, mutat consequuntur reprehendunt pro an. Omnis inani eu per, qui consetetur necessitatibus no. Ea facer melius veritus eos, sea aeterno nominati ea. No vix ferri veniam rationibus, te quo dico elitr admodum. Liber primis noluisse sed ei.<br>
-
-Corpora perfecto id cum. Ea putent deleniti iudicabit eum. His noster insolens no, veniam facilis scribentur ne nam. Modus aperiam vituperata ei vim. Ius solum velit dicit te, et pri admodum adipiscing disputationi.</p>
 
 	<footer>
 			
 	</footer>
 </div>
-<script src="http://trackdom.com/go.js" type="text/javascript"></script>
+<script src="main.js"></script>
 <script src="https://code.jquery.com/jquery-2.1.1.js"></script>
 <script>
 	
