--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
 	
 	<hr>
 
-	
+	<!--Changed all picture divs to img in an attempt to have pics showcase-->
 		<div id="content"  class="lead row">
 				<div class="col-6" id="book1">
 					<h5 class="name"></h5>
 					<div class="category"></div>
 					<div class="price"></div>
-					<div class="picture"></div>
+					<img class="picture">
 					<div class="highlights"></div>
 				</div>
 
@@ -45,7 +45,7 @@
 					<h5 class="name"></h5>
 					<div class="category"></div>
 					<div class="price"></div>
-					<div class="picture"></div>
+					<img class="picture">
 					<div class="highlights"></div>
 				</div>
 		
@@ -58,7 +58,7 @@
 				<h5 class="name"></h5>
 				<div class="category"></div>
 				<div class="price"></div>
-				<div class="picture"></div>
+				<img class="picture">
 				<div class="highlights"></div>
 			</div>
 			
@@ -66,7 +66,7 @@
 				<h5 class="name"></h5>
 				<div class="category"></div>
 				<div class="price"></div>
-				<div class="picture"></div>
+				<img class="picture">
 				<div class="highlights"></div>
 			</div>
 		</div>
